[package]
name = "fitff"
version = "0.1.0"
edition = "2021"
authors = ["David Pitoniak (github: Pitoniak32)"]
repository = "https://github.com/pitoniak32/fitff"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.8", features = ["derive", "env"] }
clap-verbosity-flag = "2.0.1"
env_logger = "0.10.0"
glob = "0.3.1"
log = "0.4.19"
reqwest = { version = "0.11.18", features = ["blocking", "multipart"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_derive = "1.0.164"
serde_json = "1.0.99"
tokio = { version = "1.28.2", features = ["full"] }
url = "2.4.0"
