[package]
name = "fitff"
version = "0.2.1"
edition = "2021"
authors = ["David Pitoniak (github: Pitoniak32)"]
repository = "https://github.com/pitoniak32/fitff"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.5.21", features = ["derive", "env"] }
clap-verbosity-flag = "2.0.1"
env_logger = "0.10.0"
log = "0.4.19"
reqwest = { version = "0.11.18", features = ["blocking", "multipart", "stream"] }
inquire = { version = "0.7.5", features = ["chrono", "date"] }

serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"

uuid = { version = "1.11.0", features = ["fast-rng", "v4"] }
glob = "0.3.2"
chrono = "0.4.39"
